--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>commit check</h1>
     <div>long text for check</div>
     <div>after save</div>
+    <div>learned</div>
 </body>
 </html>
