linking of pics and files dione

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trailout</title>
+    <link rel="stylesheet" href="sinker.css">
 </head>
 <body>
     <div>Welcome to Trail Out</div>
@@ -11,5 +12,14 @@
     <div>long text for check</div>
     <div>after save</div>
     <div>learned</div>
+    <h1></h1>
+
+    <div>
+        <h1>lets jump to build website</h1>
+        <p class="fe">using a pic also</p>
+        <div class="imo"></div>
+        <img class="imag" src="https://fastly.picsum.photos/id/866/200/300.jpg?hmac=rcadCENKh4rD6MAp6V_ma-AyWv641M4iiOpe1RyFHeI" alt="cloud image from picsum">
+        <img class="imag" src="Capture.PNG" alt="normal one">
+    </div>
 </body>
 </html>
