checking for deployed site

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <h1>lets jump to build website</h1>
         <p class="fe">using a pic also</p>
         <div class="imo"></div>
+        <div class="imo" style="background-color: red;"></div>
         <img class="imag" src="https://fastly.picsum.photos/id/866/200/300.jpg?hmac=rcadCENKh4rD6MAp6V_ma-AyWv641M4iiOpe1RyFHeI" alt="cloud image from picsum">
         <img class="imag" src="Capture.PNG" alt="normal one">
     </div>
